--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,11 @@
             <artifactId>jMetalRealWorldProblems</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>br.usp.poli.pcs.lti</groupId>
+            <artifactId>jMetalHyperHeuristicHelper</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
