--- a/pom.xml
+++ b/pom.xml
@@ -72,15 +72,10 @@
             <version>5.7</version>
         </dependency>
         <dependency>
-            <groupId>${project.groupId}</groupId>
-            <artifactId>jMetalRealWorldProblems</artifactId>
-            <version>${project.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>br.usp.poli.pcs.lti</groupId>
-            <artifactId>jMetalHyperHeuristicHelper</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
+	    <groupId>com.github.vinixnan</groupId>
+	    <artifactId>jMetalHyperHeuristicHelper</artifactId>
+	    <version>First</version>
+	</dependency>
     </dependencies>
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
